--- a/installer.html
+++ b/installer.html
@@ -13,7 +13,7 @@
     <center>
         <h1>Install Youtube Player - iOS</h1>
         <h4>To Get Started, Click on The Install/Download Button</h4>
-        <button class="install" id="install"><a href="file://app.mobileconfig">Install Profile</a></button>
+        <button class="install" id="install"><a href="file://app.mobileconfig/">Install Profile</a></button>
         <button class="install" id="help"><a href="#">Need Help?</a></button>
         <button class="install"><a href="index.html">Use Website</a></button>
     </center>
