--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <ul style="color:white;font-weight:500;">
             <li>Don't Clear Browser Data</li>
         </ul>
-        <p>ee</p>
+        <p style="color:transparent;">ee</p>
         <p style="color:white;">API Key: </p><input type="text" id="api">
         <button id="submitApiKey">Save API Key</button>
         <p style="color:white;">Set Search Query (1): </p><input type="text" id="SearchQuery1">
